@@ -19,6 +19,7 @@ Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und 
 ### Changed
 - Bestellliste gruppiert Parts jetzt nach Status und Finding-Label, inklusive Ausgabe im Bestelltext.
 - Status- und Label-Überschriften der Bestellliste übernehmen jetzt die gleiche Schriftfarbe wie die Parts.
+- Trennlinien in der Bestellliste übernehmen ebenfalls die Part-Textfarbe und neue Findings starten standardmäßig mit Status "Spare".
 
 ## [1.5.8] – 2026-01-22
 ### Changed
